--- a/templates/config-map12h-fw2-harmonics.json
+++ b/templates/config-map12h-fw2-harmonics.json
@@ -1023,22 +1023,22 @@
             {
                 "name": "Ch 1 NP energy L1",
                 "reg_type": "input",
-                "address": "0x1506",
+                "address": "0x1504",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l1"
             },
             {
                 "name": "Ch 1 NN energy L1",
                 "reg_type": "input",
-                "address": "0x1516",
+                "address": "0x1514",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l1"
             },
@@ -1210,22 +1210,22 @@
             {
                 "name": "Ch 1 NP energy L2",
                 "reg_type": "input",
-                "address": "0x150a",
+                "address": "0x1508",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l2"
             },
             {
                 "name": "Ch 1 NN energy L2",
                 "reg_type": "input",
-                "address": "0x151a",
+                "address": "0x1518",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l2"
             },
@@ -1397,22 +1397,22 @@
             {
                 "name": "Ch 1 NP energy L3",
                 "reg_type": "input",
-                "address": "0x150e",
+                "address": "0x150c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l3"
             },
             {
                 "name": "Ch 1 NN energy L3",
                 "reg_type": "input",
-                "address": "0x151e",
+                "address": "0x151c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l3"
             },
@@ -1554,22 +1554,22 @@
             {
                 "name": "Ch 1 Total NP energy",
                 "reg_type": "input",
-                "address": "0x1502",
+                "address": "0x1500",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_total"
             },
             {
                 "name": "Ch 1 Total NN energy",
                 "reg_type": "input",
-                "address": "0x1512",
+                "address": "0x1510",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_total"
             },
@@ -2101,22 +2101,22 @@
             {
                 "name": "Ch 2 NP energy L1",
                 "reg_type": "input",
-                "address": "0x2506",
+                "address": "0x2504",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l1"
             },
             {
                 "name": "Ch 2 NN energy L1",
                 "reg_type": "input",
-                "address": "0x2516",
+                "address": "0x2514",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l1"
             },
@@ -2288,22 +2288,22 @@
             {
                 "name": "Ch 2 NP energy L2",
                 "reg_type": "input",
-                "address": "0x250a",
+                "address": "0x2508",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l2"
             },
             {
                 "name": "Ch 2 NN energy L2",
                 "reg_type": "input",
-                "address": "0x251a",
+                "address": "0x2518",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l2"
             },
@@ -2475,22 +2475,22 @@
             {
                 "name": "Ch 2 NP energy L3",
                 "reg_type": "input",
-                "address": "0x250e",
+                "address": "0x250c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l3"
             },
             {
                 "name": "Ch 2 NN energy L3",
                 "reg_type": "input",
-                "address": "0x251e",
+                "address": "0x251c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l3"
             },
@@ -2632,22 +2632,22 @@
             {
                 "name": "Ch 2 Total NP energy",
                 "reg_type": "input",
-                "address": "0x2502",
+                "address": "0x2500",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_total"
             },
             {
                 "name": "Ch 2 Total NN energy",
                 "reg_type": "input",
-                "address": "0x2512",
+                "address": "0x2510",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_total"
             },
@@ -3179,22 +3179,22 @@
             {
                 "name": "Ch 3 NP energy L1",
                 "reg_type": "input",
-                "address": "0x3506",
+                "address": "0x3504",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l1"
             },
             {
                 "name": "Ch 3 NN energy L1",
                 "reg_type": "input",
-                "address": "0x3516",
+                "address": "0x3514",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l1"
             },
@@ -3366,22 +3366,22 @@
             {
                 "name": "Ch 3 NP energy L2",
                 "reg_type": "input",
-                "address": "0x350a",
+                "address": "0x3508",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l2"
             },
             {
                 "name": "Ch 3 NN energy L2",
                 "reg_type": "input",
-                "address": "0x351a",
+                "address": "0x3518",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l2"
             },
@@ -3553,22 +3553,22 @@
             {
                 "name": "Ch 3 NP energy L3",
                 "reg_type": "input",
-                "address": "0x350e",
+                "address": "0x350c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l3"
             },
             {
                 "name": "Ch 3 NN energy L3",
                 "reg_type": "input",
-                "address": "0x351e",
+                "address": "0x351c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l3"
             },
@@ -3710,22 +3710,22 @@
             {
                 "name": "Ch 3 Total NP energy",
                 "reg_type": "input",
-                "address": "0x3502",
+                "address": "0x3500",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_total"
             },
             {
                 "name": "Ch 3 Total NN energy",
                 "reg_type": "input",
-                "address": "0x3512",
+                "address": "0x3510",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_total"
             },
@@ -4257,22 +4257,22 @@
             {
                 "name": "Ch 4 NP energy L1",
                 "reg_type": "input",
-                "address": "0x4506",
+                "address": "0x4504",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l1"
             },
             {
                 "name": "Ch 4 NN energy L1",
                 "reg_type": "input",
-                "address": "0x4516",
+                "address": "0x4514",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l1"
             },
@@ -4444,22 +4444,22 @@
             {
                 "name": "Ch 4 NP energy L2",
                 "reg_type": "input",
-                "address": "0x450a",
+                "address": "0x4508",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l2"
             },
             {
                 "name": "Ch 4 NN energy L2",
                 "reg_type": "input",
-                "address": "0x451a",
+                "address": "0x4518",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l2"
             },
@@ -4631,22 +4631,22 @@
             {
                 "name": "Ch 4 NP energy L3",
                 "reg_type": "input",
-                "address": "0x450e",
+                "address": "0x450c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l3"
             },
             {
                 "name": "Ch 4 NN energy L3",
                 "reg_type": "input",
-                "address": "0x451e",
+                "address": "0x451c",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l3"
             },
@@ -4788,22 +4788,22 @@
             {
                 "name": "Ch 4 Total NP energy",
                 "reg_type": "input",
-                "address": "0x4502",
+                "address": "0x4500",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_total"
             },
             {
                 "name": "Ch 4 Total NN energy",
                 "reg_type": "input",
-                "address": "0x4512",
+                "address": "0x4510",
                 "type": "value",
-                "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "format": "u64",
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_total"
             },
