--- a/templates/config-map3ev.json
+++ b/templates/config-map3ev.json
@@ -6,6 +6,9 @@
         {
             "signature": "MAP3E",
             "fw": "2.0.0"
+        },
+        {
+            "signature": "WB-MAP3EV"
         }
     ],
     "device": {
