remove PYEZ1R05J4 from title

--- a/templates/config-carel-pj-basic-deprecated.json
+++ b/templates/config-carel-pj-basic-deprecated.json
@@ -1,5 +1,5 @@
 {
-    "title": "Carel PJ BASIC (PYEZ1R05J4, PYEZ1R05J5)",
+    "title": "Carel PJ BASIC (PYEZ1R05J5)",
     "device_type": "carel_pj_basic",
     "group": "g-refrigeration",
     "deprecated": true,
