--- a/templates/config-carel-pj-basic.json
+++ b/templates/config-carel-pj-basic.json
@@ -1,5 +1,5 @@
 {
-    "title": "Carel PJ BASIC (PYEZ1R05J4, PYEZ1R05J5)",
+    "title": "Carel PJ BASIC (PYEZ1R05J5)",
     "device_type": "tpl1_carel_pj_basic",
     "group": "g-refrigeration",
     "device": {
