fix name for two channels

--- a/templates/config-carel-mu-rack.json
+++ b/templates/config-carel-mu-rack.json
@@ -2095,14 +2095,14 @@
                 "type": "switch"
             },
             {
-                "name": "Alarm Low Suction Pressure 1",
+                "name": "Alarm General Low Suction Pressure 1",
                 "group": "alarms",
                 "reg_type": "discrete",
                 "address": 44,
                 "type": "switch"
             },
             {
-                "name": "Alarm Low Suction Pressure 2",
+                "name": "Alarm General Low Suction Pressure 2",
                 "group": "alarms",
                 "reg_type": "discrete",
                 "address": 35,
