--- a/templates/config-wbe2-i-ebus.json
+++ b/templates/config-wbe2-i-ebus.json
@@ -75,7 +75,7 @@
                 "group": "boiler_state",
                 "enabled": false
             },
-			 {
+            {
                 "name": "Hot Water Setpoint Max",
                 "address": 211,
                 "reg_type": "input",
@@ -83,31 +83,35 @@
                 "format": "u16",
                 "group": "boiler_state"
             },
-            { "name": "Water Pressure",
+            {
+                "name": "Water Pressure",
                 "address": 212,
                 "reg_type": "input",
                 "type": "pressure",
                 "format": "s16",
-				"scale" :0.001,
+                "scale": 0.001,
                 "group": "boiler_state"
             },
-            { "name": "Burner Modulation Level",
+            {
+                "name": "Burner Modulation Level",
                 "address": 213,
                 "reg_type": "input",
                 "type": "value",
                 "format": "s16",
-				"scale" :0.1,
+                "scale": 0.1,
                 "units": "%",
                 "group": "boiler_state"
             },
-            { "name": "Invalid Connection",
+            {
+                "name": "Invalid Connection",
                 "address": 214,
                 "reg_type": "input",
                 "type": "value",
                 "format": "u16",
                 "group": "boiler_state"
             },
-            { "name": "Boiler Status",
+            {
+                "name": "Boiler Status",
                 "address": 215,
                 "reg_type": "input",
                 "type": "value",
@@ -355,7 +359,7 @@
                 "Heating Temperature": "Температура подачи отопления",
                 "Heating Return Water Temperature": "Температура обратной воды отопления",
                 "Boiler Outdoor Temperature Sensor": "Уличная температура (датчик котла)",
-				"Hot Water Setpoint Max": "Максимальное значение температуры ГВС",
+                "Hot Water Setpoint Max": "Максимальное значение температуры ГВС",
                 "Water Pressure": "Давление",
                 "Burner Modulation Level" : "Модуляция котла",
                 "Invalid Connection": "Ошибка связи с котлом",
